@@ -1,8 +1,13 @@
 siduxcc (0.5.6.13) UNRELEASED; urgency=low
 
+  [ Stefan Lippers-Hollmann ]
   * NOT RELEASED YET
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Wed, 29 Aug 2007 12:32:46 +0200
+  [ Fabian Wuertz ]
+  * NOT RELEASED YET
+  * siduxcc_hermes: menu-entry for siduxcc_software
+
+ -- Fabian Wuertz <xadras@sidux.com>  Fri, 31 Aug 2007 10:32:37 +0200
 
 siduxcc (0.5.6.12) unstable; urgency=low
 
